assets/css/style.css
html {
    background: url(https://images.unsplash.com/photo-1457364887197-9150188c107b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-repeat: no-repeat;
}

img {
    max-width: 110% !important;
}

.header {
    width: 100%;
    text-align: center;
    padding-top: 50px;
    font-size: 80px;
    color: #fff;
    animation: glow 1s ease-in-out infinite alternate;
}


@-webkit-keyframes glow {
    from {
        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e26919, 0 0 40px #e26919, 0 0 50px #e26919, 0 0 60px #e26919, 0 0 70px #e26919;
    }

    to {
        text-shadow: 0 0 20px #fff, 0 0 30px #aa0512, 0 0 40px #aa0512, 0 0 50px #aa0512, 0 0 60px #aa0512, 0 0 70px #aa0512, 0 0 80px #aa0512;
    }
}

.launches {
    font-size: 1.5rem;
    margin:20px;
    padding-top: 50px;
    color: #fff;
}

.launchcards {
    display: flex;
    justify-content: center;
    gap: 50px;
    margin-top: 25px;
}

.launchcards .card {
    list-style: none;
    padding-top: 25px; 

}
.pastlaunch {
    font-size: 1.5rem;
    margin: 20px;
    justify-content: center;
    padding-top: 70px;
    color:#fff
}

.pastlaunchcards {
    display: flex;
    justify-content: center;
    gap: 50px;
    margin-top: 25px;
}

.pastlaunchcards .pcard {
    list-style: none;
    color: #fff;
    padding: 70px 68px;
    border-radius: 5px;
    background: #305c6e;
    opacity: .4;
}

aside {
    background-color: #305c6e;
    opacity: .4;
    padding: 10px;
    margin: 10px;
    border: 1px solid #ccc;
    width: 350px;
}
aside form {
    display: flex;
    align-items: center;
}

aside input [type="text"] {
    padding: 5px;
    border: 1px solid #ccc;
}

aside button[type="submit"] {
    padding: 5px 10px;
    background-color: #007bff;
    color: #fff;
    border: none;
    cursor: pointer;
}

footer {
    padding-top: 20px;
    text-align: center;
}

footer p {
    color:#fff;
}


#loader {
    margin:auto;
    border: 20px solid #fff;
    border-top: 20px solid #305c6e;
    border-radius: 50%;
    width: 200px;
    height: 200px;
    animation: spin 2s linear infinite;
    position: relative;
    margin-top: -830px;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }

